--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.3.1"
   },
   "scripts": {
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
