--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "node": "6.3.1"
   },
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "dev": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "mongoose": "^4.10.2"
   },
